@@ -505,9 +505,9 @@ function forum_form_main($type, $edit = array()) {
  */
 function forum_form_forum($edit = array()) {
   $edit += array(
-    'name' => '', 
-    'description' => '', 
-    'tid' => NULL, 
+    'name' => '',
+    'description' => '',
+    'tid' => NULL,
     'weight' => 0,
   );
   $form['name'] = array('#type' => 'textfield',
