@@ -7,6 +7,11 @@ Drupal 6.0, xxxx-xx-xx (development version)
 - Drupal works with error reporting set to E_ALL.
 - Added scripts/drupal.sh to execute Drupal code from the command line. Useful to use Drupal as a framework to build command-line tools.
 - Used the Garland theme for the installation and maintenance pages.
+- Added generic language management functionality.
+    * Support for right to left scripts.
+    * Language detection based on parts of the URL.
+    * Browser based language detection.
+- Language dependent path aliases.
 
 Drupal 5.0, 2007-01-15
 ----------------------
